Fix opportunities size on mobile

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -14,7 +14,9 @@
 .opp-section {
   .article {
     &__main {
-      max-width: calc(100% - 200px);
+      @include media-breakpoint-up(sm) {
+        max-width: calc(100% - 200px);
+      }
     }
   }
 }
